[package]
name = "oidc-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenvy = "0.15"
open = "5.1.2"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"
